--- a/SocialMusicApp/Views/Home/Friends.cshtml
+++ b/SocialMusicApp/Views/Home/Friends.cshtml
@@ -450,13 +450,13 @@
             <div class="feature-photo">
                 <figure><img src="images/resources/timeline-1.jpg" alt=""></figure>
                 <div class="add-btn">
-                    <span>1205 followers</span>
-                    <a href="#" title="" data-ripple="">Add Friend</a>
+                    <span>1205 seguidores</span>
+                    <a href="#" title="" data-ripple="">Adicionar amigo</a>
                 </div>
                 <form class="edit-phto">
                     <i class="fa fa-camera-retro"></i>
                     <label class="fileContainer">
-                        Edit Cover Photo
+                        Editar Foto de Capa
                         <input type="file" />
                     </label>
                 </form>
@@ -469,7 +469,7 @@
                                     <form class="edit-phto">
                                         <i class="fa fa-camera-retro"></i>
                                         <label class="fileContainer">
-                                            Edit Display Photo
+                                            Editar Foto de Perfil
                                             <input type="file" />
                                         </label>
                                     </form>
@@ -481,16 +481,16 @@
                                 <ul>
                                     <li class="admin-name">
                                         <h5>Janice Griffith</h5>
-                                        <span>Group Admin</span>
+                                        <span>Admin do Grupo</span>
                                     </li>
                                     <li>
-                                        <a class="" href="time-line.html" title="" data-ripple="">time line</a>
-                                        <a class="" href="timeline-photos.html" title="" data-ripple="">Photos</a>
-                                        <a class="" href="timeline-videos.html" title="" data-ripple="">Videos</a>
-                                        <a class="active" href="timeline-friends.html" title="" data-ripple="">Friends</a>
-                                        <a class="" href="timeline-groups.html" title="" data-ripple="">Groups</a>
-                                        <a class="" href="about.html" title="" data-ripple="">about</a>
-                                        <a class="" href="#" title="" data-ripple="">more</a>
+                                        <a class="" href="time-line.html" title="" data-ripple="">Linha do tempo</a>
+                                        <a class="" href="timeline-photos.html" title="" data-ripple="">Fotos</a>
+                                        <a class="" href="timeline-videos.html" title="" data-ripple="">Vídeos</a>
+                                        <a class="active" href="timeline-friends.html" title="" data-ripple="">Amigos</a>
+                                        <a class="" href="timeline-groups.html" title="" data-ripple="">Grupos</a>
+                                        <a class="" href="about.html" title="" data-ripple="">sobre</a>
+                                        <a class="" href="#" title="" data-ripple="">mais</a>
                                     </li>
                                 </ul>
                             </div>
@@ -509,67 +509,67 @@
                                 <div class="col-lg-3">
                                     <aside class="sidebar static">
                                         <div class="widget">
-                                            <h4 class="widget-title">Shortcuts</h4>
+                                            <h4 class="widget-title">Atalhos</h4>
                                             <ul class="naves">
                                                 <li>
                                                     <i class="ti-clipboard"></i>
-                                                    <a href="newsfeed.html" title="">News feed</a>
+                                                    <a href="newsfeed.html" title="">Linha do Tempo</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-mouse-alt"></i>
-                                                    <a href="inbox.html" title="">Inbox</a>
+                                                    <a href="inbox.html" title="">Caixa de Mensagens</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-files"></i>
-                                                    <a href="fav-page.html" title="">My pages</a>
+                                                    <a href="fav-page.html" title="">Minhas páginas</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-user"></i>
-                                                    <a href="timeline-friends.html" title="">friends</a>
+                                                    <a href="timeline-friends.html" title="">Amigos</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-image"></i>
-                                                    <a href="timeline-photos.html" title="">images</a>
+                                                    <a href="timeline-photos.html" title="">Imagens</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-video-camera"></i>
-                                                    <a href="timeline-videos.html" title="">videos</a>
+                                                    <a href="timeline-videos.html" title="">vídeos</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-comments-smiley"></i>
-                                                    <a href="messages.html" title="">Messages</a>
+                                                    <a href="messages.html" title="">Mensagens</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-bell"></i>
-                                                    <a href="notifications.html" title="">Notifications</a>
+                                                    <a href="notifications.html" title="">Notificações</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-share"></i>
-                                                    <a href="people-nearby.html" title="">People Nearby</a>
+                                                    <a href="people-nearby.html" title="">Pessoas próximas</a>
                                                 </li>
                                                 <li>
                                                     <i class="fa fa-bar-chart-o"></i>
-                                                    <a href="insights.html" title="">insights</a>
+                                                    <a href="insights.html" title="">Insights</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-power-off"></i>
-                                                    <a href="landing.html" title="">Logout</a>
+                                                    <a href="landing.html" title="">Sair</a>
                                                 </li>
                                             </ul>
                                         </div><!-- Shortcuts -->
                                         <div class="widget stick-widget">
-                                            <h4 class="widget-title">Profile intro</h4>
+                                            <h4 class="widget-title">Perfil</h4>
                                             <ul class="short-profile">
                                                 <li>
-                                                    <span>about</span>
+                                                    <span>Sobre</span>
                                                     <p>Hi, i am jhon kates, i am 32 years old and worked as a web developer in microsoft company. </p>
                                                 </li>
                                                 <li>
-                                                    <span>fav tv show</span>
+                                                    <span>Séries Favoritas</span>
                                                     <p>Hi, i am jhon kates, i am 32 years old and worked as a web developer in microsoft company. </p>
                                                 </li>
                                                 <li>
-                                                    <span>favourit music</span>
+                                                    <span>Artistas Favoritos</span>
                                                     <p>Hi, i am jhon kates, i am 32 years old and worked as a web developer in microsoft company. </p>
                                                 </li>
                                             </ul>
@@ -581,8 +581,8 @@
                                     <div class="central-meta">
                                         <div class="frnds">
                                             <ul class="nav nav-tabs">
-                                                <li class="nav-item"><a class="active" href="#frends" data-toggle="tab">My Friends</a> <span>55</span></li>
-                                                <li class="nav-item"><a class="" href="#frends-req" data-toggle="tab">Friend Requests</a><span>60</span></li>
+                                                <li class="nav-item"><a class="active" href="#frends" data-toggle="tab">Meus Amigos</a> <span>55</span></li>
+                                                <li class="nav-item"><a class="" href="#frends-req" data-toggle="tab">Solicitações de Amizade</a><span>60</span></li>
                                             </ul>
 
                                             <!-- Tab panes -->
@@ -597,8 +597,8 @@
                                                                 <div class="pepl-info">
                                                                     <h4><a href="time-line.html" title="">jhon kates</a></h4>
                                                                     <span>ftv model</span>
-                                                                    <a href="#" title="" class="add-butn more-action" data-ripple="">unfriend</a>
-                                                                    <a href="#" title="" class="add-butn" data-ripple="">add friend</a>
+                                                                    <a href="#" title="" class="add-butn more-action" data-ripple="">desfazer amizade</a>
+                                                                    <a href="#" title="" class="add-butn" data-ripple="">adicionar amigo</a>
                                                                 </div>
                                                             </div>
                                                         </li>
@@ -706,8 +706,8 @@
                                                                 <div class="pepl-info">
                                                                     <h4><a href="time-line.html" title="">Amy watson</a></h4>
                                                                     <span>ftv model</span>
-                                                                    <a href="#" title="" class="add-butn more-action" data-ripple="">delete Request</a>
-                                                                    <a href="#" title="" class="add-butn" data-ripple="">Confirm</a>
+                                                                    <a href="#" title="" class="add-butn more-action" data-ripple="">deletar solicitação</a>
+                                                                    <a href="#" title="" class="add-butn" data-ripple="">Confirmar</a>
                                                                 </div>
                                                             </div>
                                                         </li>
@@ -813,7 +813,7 @@
                                 <div class="col-lg-3">
                                     <aside class="sidebar static">
                                         <div class="widget">
-                                            <h4 class="widget-title">Who's follownig</h4>
+                                            <h4 class="widget-title">Sugestões de Amizade</h4>
                                             <ul class="followers">
                                                 <li>
                                                     <figure><img src="images/resources/friend-avatar2.jpg" alt=""></figure>
@@ -853,7 +853,7 @@
                                             </ul>
                                         </div><!-- who's following -->
                                         <div class="widget friend-list stick-widget">
-                                            <h4 class="widget-title">Friends</h4>
+                                            <h4 class="widget-title">Amigos</h4>
                                             <div id="searchDir"></div>
                                             <ul id="people-list" class="friendz-list">
                                                 <li>
