--- a/SocialMusicApp/Views/Home/Index.cshtml
+++ b/SocialMusicApp/Views/Home/Index.cshtml
@@ -168,7 +168,7 @@
                                 <label for="switch3" data-on-label="ON" data-off-label="OFF"></label>
                             </div>
                             <div class="setting-row">
-                                <span>My profile</span>
+                                <span>Meu Perfil</span>
                                 <input type="checkbox" id="switch4" />
                                 <label for="switch4" data-on-label="ON" data-off-label="OFF"></label>
                             </div>
@@ -557,27 +557,27 @@
                                 <div class="col-lg-3">
                                     <aside class="sidebar static left">
                                         <div class="widget">
-                                            <h4 class="widget-title">Shortcuts</h4>
+                                            <h4 class="widget-title">Atalhos</h4>
                                             <ul class="naves">
                                                 <li>
                                                     <i class="ti-clipboard"></i>
-                                                    <a href="newsfeed.html" title="">News feed</a>
+                                                    <a href="newsfeed.html" title="">Linha do Tempo</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-mouse-alt"></i>
-                                                    <a href="inbox.html" title="">Inbox</a>
+                                                    <a href="inbox.html" title="">Caixa de Mensagens</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-files"></i>
-                                                    <a href="fav-page.html" title="">My pages</a>
+                                                    <a href="fav-page.html" title="">Minhas Páginas</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-user"></i>
-                                                    <a href="/Home/Friends" title="">friends</a>
+                                                    <a href="/Home/Friends" title="">amigos</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-image"></i>
-                                                    <a href="/Home/Photos" title="">images</a>
+                                                    <a href="/Home/Photos" title="">imagens</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-video-camera"></i>
@@ -585,15 +585,15 @@
                                                 </li>
                                                 <li>
                                                     <i class="ti-comments-smiley"></i>
-                                                    <a href="messages.html" title="">Messages</a>
+                                                    <a href="messages.html" title="">Mensagens</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-bell"></i>
-                                                    <a href="notifications.html" title="">Notifications</a>
+                                                    <a href="notifications.html" title="">Notificações</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-share"></i>
-                                                    <a href="people-nearby.html" title="">People Nearby</a>
+                                                    <a href="people-nearby.html" title="">Pessoas próximas</a>
                                                 </li>
                                                 <li>
                                                     <i class="fa fa-bar-chart-o"></i>
@@ -601,30 +601,30 @@
                                                 </li>
                                                 <li>
                                                     <i class="ti-power-off"></i>
-                                                    <a href="/Home/Login" title="">Logout</a>
+                                                    <a href="/Home/Login" title="">Sair</a>
                                                 </li>
                                             </ul>
                                         </div><!-- Shortcuts -->
                                         <div class="widget">
-                                            <h4 class="widget-title">Recent Activity</h4>
+                                            <h4 class="widget-title">Atividades Recentes</h4>
                                             <ul class="activitiez">
                                                 <li>
                                                     <div class="activity-meta">
-                                                        <i>10 hours Ago</i>
-                                                        <span><a href="#" title="">Commented on Video posted </a></span>
-                                                        <h6>by <a href="time-line.html">black demon.</a></h6>
+                                                        <i>10 horas atrás</i>
+                                                        <span><a href="#" title="">Commentou em um Video postado </a></span>
+                                                        <h6>por <a href="time-line.html">black demon.</a></h6>
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="activity-meta">
-                                                        <i>30 Days Ago</i>
-                                                        <span><a href="#" title="">Posted your status. “Hello guys, how are you?”</a></span>
+                                                        <i>30 Dias atrás</i>
+                                                        <span><a href="#" title="">Postou um status. “Hello guys, how are you?”</a></span>
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="activity-meta">
-                                                        <i>2 Years Ago</i>
-                                                        <span><a href="#" title="">Share a video on her timeline.</a></span>
+                                                        <i>2 Anos atrás</i>
+                                                        <span><a href="#" title="">Compartilhou um vídeo na linha do tempo.</a></span>
                                                         <h6>"<a href="#">you are so funny mr.been.</a>"</h6>
                                                     </div>
                                                 </li>
@@ -1299,26 +1299,26 @@
                                 <div class="col-lg-3">
                                     <aside class="sidebar static right">
                                         <div class="widget">
-                                            <h4 class="widget-title">Your page</h4>
+                                            <h4 class="widget-title">Seu perfil</h4>
                                             <div class="your-page">
                                                 <figure>
                                                     <a href="#" title=""><img src="images/resources/friend-avatar9.jpg" alt=""></a>
                                                 </figure>
                                                 <div class="page-meta">
-                                                    <a href="#" title="" class="underline">My page</a>
-                                                    <span><i class="ti-comment"></i><a href="insight.html" title="">Messages <em>9</em></a></span>
-                                                    <span><i class="ti-bell"></i><a href="insight.html" title="">Notifications <em>2</em></a></span>
+                                                    <a href="#" title="" class="underline">Minha página</a>
+                                                    <span><i class="ti-comment"></i><a href="insight.html" title="">Mensagens <em>9</em></a></span>
+                                                    <span><i class="ti-bell"></i><a href="insight.html" title="">Notificações <em>2</em></a></span>
                                                 </div>
                                                 <div class="page-likes">
                                                     <ul class="nav nav-tabs likes-btn">
-                                                        <li class="nav-item"><a class="active" href="#link1" data-toggle="tab">likes</a></li>
-                                                        <li class="nav-item"><a class="" href="#link2" data-toggle="tab">views</a></li>
+                                                        <li class="nav-item"><a class="active" href="#link1" data-toggle="tab">curtidas</a></li>
+                                                        <li class="nav-item"><a class="" href="#link2" data-toggle="tab">visualizações</a></li>
                                                     </ul>
                                                     <!-- Tab panes -->
                                                     <div class="tab-content">
                                                         <div class="tab-pane active fade show " id="link1">
                                                             <span><i class="ti-heart"></i>884</span>
-                                                            <a href="#" title="weekly-likes">35 new likes this week</a>
+                                                            <a href="#" title="weekly-likes">35 novas curtidas essa semana</a>
                                                             <div class="users-thumb-list">
                                                                 <a href="#" title="Anderw" data-toggle="tooltip">
                                                                     <img src="images/resources/userlist-1.jpg" alt="">
@@ -1345,7 +1345,7 @@
                                                         </div>
                                                         <div class="tab-pane fade" id="link2">
                                                             <span><i class="ti-eye"></i>440</span>
-                                                            <a href="#" title="weekly-likes">440 new views this week</a>
+                                                            <a href="#" title="weekly-likes">440 novas visualizações essa semana</a>
                                                             <div class="users-thumb-list">
                                                                 <a href="#" title="Anderw" data-toggle="tooltip">
                                                                     <img src="images/resources/userlist-1.jpg" alt="">
@@ -1391,18 +1391,18 @@
                                             </div>
                                         </div>
                                         <div class="widget stick-widget">
-                                            <h4 class="widget-title">Profile intro</h4>
+                                            <h4 class="widget-title">Perfil</h4>
                                             <ul class="short-profile">
                                                 <li>
-                                                    <span>about</span>
+                                                    <span>Sobre mim</span>
                                                     <p>Hi, i am jhon kates, i am 32 years old and worked as a web developer in microsoft </p>
                                                 </li>
                                                 <li>
-                                                    <span>fav tv show</span>
+                                                    <span>Séries Favoritas</span>
                                                     <p>Sacred Games, Spartcus Blood, Games of Theron </p>
                                                 </li>
                                                 <li>
-                                                    <span>favourit music</span>
+                                                    <span>Artistas Favoritos</span>
                                                     <p>Justin Biber, Shakira, Nati Natasah</p>
                                                 </li>
                                             </ul>
