--- a/SocialMusicApp/Views/Home/Photos.cshtml
+++ b/SocialMusicApp/Views/Home/Photos.cshtml
@@ -450,13 +450,13 @@
             <div class="feature-photo">
                 <figure><img src="images/resources/timeline-1.jpg" alt=""></figure>
                 <div class="add-btn">
-                    <span>1205 followers</span>
-                    <a href="#" title="" data-ripple="">Add Friend</a>
+                    <span>1205 seguidores</span>
+                    <a href="#" title="" data-ripple="">Adicionar amigo</a>
                 </div>
                 <form class="edit-phto">
                     <i class="fa fa-camera-retro"></i>
                     <label class="fileContainer">
-                        Edit Cover Photo
+                        Editar Foto de Capa
                         <input type="file" />
                     </label>
                 </form>
@@ -469,7 +469,7 @@
                                     <form class="edit-phto">
                                         <i class="fa fa-camera-retro"></i>
                                         <label class="fileContainer">
-                                            Edit Display Photo
+                                            Editar Foto de Perfil
                                             <input type="file" />
                                         </label>
                                     </form>
@@ -481,16 +481,16 @@
                                 <ul>
                                     <li class="admin-name">
                                         <h5>Janice Griffith</h5>
-                                        <span>Group Admin</span>
+                                        <span>Admin do grupo</span>
                                     </li>
                                     <li>
-                                        <a class="" href="time-line.html" title="" data-ripple="">time line</a>
-                                        <a class="active" href="timeline-photos.html" title="" data-ripple="">Photos</a>
-                                        <a class="" href="timeline-videos.html" title="" data-ripple="">Videos</a>
-                                        <a class="" href="timeline-friends.html" title="" data-ripple="">Friends</a>
-                                        <a class="" href="timeline-groups.html" title="" data-ripple="">Groups</a>
-                                        <a class="" href="about.html" title="" data-ripple="">about</a>
-                                        <a class="" href="#" title="" data-ripple="">more</a>
+                                        <a class="" href="time-line.html" title="" data-ripple="">Linha do tempo</a>
+                                        <a class="" href="timeline-photos.html" title="" data-ripple="">Fotos</a>
+                                        <a class="" href="timeline-videos.html" title="" data-ripple="">Vídeos</a>
+                                        <a class="active" href="timeline-friends.html" title="" data-ripple="">Amigos</a>
+                                        <a class="" href="timeline-groups.html" title="" data-ripple="">Grupos</a>
+                                        <a class="" href="about.html" title="" data-ripple="">sobre</a>
+                                        <a class="" href="#" title="" data-ripple="">mais</a>
                                     </li>
                                 </ul>
                             </div>
@@ -509,43 +509,42 @@
                                 <div class="col-lg-3">
                                     <aside class="sidebar static">
                                         <div class="widget">
-                                            <h4 class="widget-title">Shortcuts</h4>
+                                            <h4 class="widget-title">Atalhos</h4>
                                             <ul class="naves">
                                                 <li>
-                                                    <i class="ti-clipboard"></i>
-                                                    <a href="newsfeed.html" title="">News feed</a>
+                                                    <i class="ti-clipboard"></i>Linha do Tempo</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-mouse-alt"></i>
-                                                    <a href="inbox.html" title="">Inbox</a>
+                                                    <a href="inbox.html" title="">Caixa de Mensagens</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-files"></i>
-                                                    <a href="fav-page.html" title="">My pages</a>
+                                                    <a href="fav-page.html" title="">Minhas páginas</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-user"></i>
-                                                    <a href="timeline-friends.html" title="">friends</a>
+                                                    <a href="timeline-friends.html" title="">Amigos</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-image"></i>
-                                                    <a href="timeline-photos.html" title="">images</a>
+                                                    <a href="timeline-photos.html" title="">imagens</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-video-camera"></i>
-                                                    <a href="timeline-videos.html" title="">videos</a>
+                                                    <a href="timeline-videos.html" title="">vídeos</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-comments-smiley"></i>
-                                                    <a href="messages.html" title="">Messages</a>
+                                                    <a href="messages.html" title="">Mensagens</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-bell"></i>
-                                                    <a href="notifications.html" title="">Notifications</a>
+                                                    <a href="notifications.html" title="">Notificações</a>
                                                 </li>
                                                 <li>
                                                     <i class="ti-share"></i>
-                                                    <a href="people-nearby.html" title="">People Nearby</a>
+                                                    <a href="people-nearby.html" title="">Pessoas próximas</a>
                                                 </li>
                                                 <li>
                                                     <i class="fa fa-bar-chart-o"></i>
@@ -553,7 +552,7 @@
                                                 </li>
                                                 <li>
                                                     <i class="ti-power-off"></i>
-                                                    <a href="landing.html" title="">Logout</a>
+                                                    <a href="landing.html" title="">Sair</a>
                                                 </li>
                                             </ul>
                                         </div><!-- Shortcuts -->
@@ -665,7 +664,7 @@
                                 <div class="col-lg-3">
                                     <aside class="sidebar static">
                                         <div class="widget">
-                                            <h4 class="widget-title">Twitter feed</h4>
+                                            <h4 class="widget-title">Twitter</h4>
                                             <ul class="twiter-feed">
                                                 <li>
                                                     <i class="fa fa-twitter"></i>
@@ -694,7 +693,7 @@
                                             </ul>
                                         </div><!-- twitter feed-->
                                         <div class="widget friend-list stick-widget">
-                                            <h4 class="widget-title">Friends</h4>
+                                            <h4 class="widget-title">Amigos</h4>
                                             <div id="searchDir"></div>
                                             <ul id="people-list" class="friendz-list">
                                                 <li>
